--- a/src/Shop/Shop.css
+++ b/src/Shop/Shop.css
@@ -1,57 +1,56 @@
 .products-container {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr); 
-  gap: 20px;  
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  gap: 20px;
   margin: 40px;
-  padding: 0 20px;  
-  }
+  padding: 0 20px;
+}
 
 .product-card {
-  border: 2px solid #364d53;
+  border: 2px solid #f1f1f1;
   border-radius: 8px;
-  overflow: hidden; 
+  overflow: hidden;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   background-color: #fff;
   display: flex;
   flex-direction: column;
   transition: transform 0.3s ease-in-out;
-  width:350px;
-  height: 450px; 
-  margin: 0 auto; /* Центрируем карточку */
-  /* height: 320px;  */
+  width: 100%;
+  max-width: 350px; 
+  height: auto; 
+  margin: 0 auto;
   border: 2px solid #f1f1f1;
-  margin:15px;
+  margin-bottom: 20px; 
 }
 
 .product-card:hover {
-  /* transform: scale(1.05);   */
-    transform: translateY(-5px); 
-    box-shadow: 0 12px 24px rgba(0, 0, 0, 0.2);   
+  transform: translateY(-5px);
+  box-shadow: 0 12px 24px rgba(0, 0, 0, 0.2);
 }
 
 .product-card .picture {
   display: flex;
   justify-content: center;
-  align-items: center; 
+  align-items: center;
   width: 100%;
   height: 200px;
-  box-sizing: border-box; 
-  border-bottom: 2px solid #f1f1f1;  
+  box-sizing: border-box;
+  border-bottom: 2px solid #f1f1f1;
   padding: 15px;
   background-color: #f9f9f9;
-  
-} 
+}
 
 .product-card .picture img {
-  width: 100%; 
-  height: 100%; 
-  object-fit: contain; 
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
 
 .product-info {
   padding: 15px;
-  text-align: center; 
-  flex-grow: 1; 
+  text-align: center;
+  flex-grow: 1;
 }
 
 .product-info h3 {
@@ -73,60 +72,201 @@
   border-radius: 4px;
   cursor: pointer;
   transition: background-color 0.3s;
-  width: 100%; 
-  margin-bottom: 40px;
+  width: 100%;
+  margin-top: 10px;
 }
 
 .product-button:hover {
-  background-color: #0056b3;
-} 
-
-/* Стиль для контейнера изображения */
-.product-card .picture {
-  display: flex;
-  justify-content: center; /* Центрируем изображение по горизонтали */
-  align-items: center; /* Центрируем изображение по вертикали */
-  padding: 15px; /* Отступы вокруг изображения */
-  width: 100%;
-  height: 180px; /* Фиксированная высота для изображения */
-  box-sizing: border-box; /* Учитываем padding при расчете размеров */
-  background-color: #f9f9f9; /* Светлый фон для изображения */
-  border-bottom: 2px solid #f1f1f1; /* Легкая линия между изображением и текстом */
+  background-color: #015551;
 }
 
-
-/* Описание товара */
 .product-info .product-description {
   font-size: 0.9em;
-  color: #555; /* Более светлый цвет для текста описания */
+  color: #555;
   margin: 10px 0;
   line-height: 1.4;
-  text-align: justify; /* Текст выровнен по ширине */
-  max-height: 60px; /* Ограничиваем высоту описания */
-  overflow: hidden; /* Обрезаем текст, если он не помещается */
-  text-overflow: ellipsis; /* Показываем многоточие в случае обрезки */
+  text-align: justify;
+  max-height: 60px;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
+.products-container .product-card:last-child {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.filter-container {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 20px;
+}
+
+.filter-container .filter {
+  padding: 10px 20px;
+  background-color: cadetblue;
+  color: white;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.filter-container .filter:hover {
+  background-color: #1F7D53;
+}
+
+.categoryButton {
+  padding: 20px;
+  margin: 1px;
+  background-color: cadetblue;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  color: #fff;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.categoryButtonSelected {
+  background-color: #1F7D53;
+  color: white;
+}
+
+/* CART */
+
+.category-container {
+  position: relative;
+  width: 100%;
+  height: auto;
+  text-align: center;
+}
+
+.category-image {
+  width: 100%; 
+ 
+  height: 500px;
+  object-fit: cover; 
+  margin-bottom: 20px;
+  filter: brightness(50%);
+}
+
+.checkout-button {
+  background-color: #D84040; 
+  color: white; 
+  border: none; 
+  padding: 15px 32px;
+  margin-right:150px;
+  text-decoration: none; 
+  display: inline-block; 
+  font-size: 16px;
+  border-radius: 8px; 
+  transition: background-color 0.3s ease; 
+}
+
+.checkout-button:hover {
+  background-color: #1F7D53; 
+  cursor: pointer; 
+}
+
+/* CART / CartItem */
+
+.cart-item {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 10px 0;
+  padding: 10px;
+  border-bottom: 4px solid #ddd;
+}
+
+.cart-item-details {
+  flex: 1;
+  text-align: center; 
+  
+}
+
+.cart-item-remove {
+  flex: 0 0 auto; 
+  cursor: pointer;
+  margin-right:75px;
+}
 
 .cartIcon{
-  width:60px;  
+  width:60px;
 }
 
-.cart{
-  margin-top:60px;
-  border-radius: 10px;
-  cursor:pointer;
+.product-info span {
+  font-size: 15px; 
 }
+
+.icon{
+  width:30px;
+}
+
+/* CART / ChangeQuantity */
+
+.quantity-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  margin-top: 10px;
+}
+
+.quantity-btn {
+  background-color: #364d53;
+  color: white;
+  padding: 5px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 18px;
+  width: 35px;
+  height: 35px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.quantity-btn:hover {
+  background-color: #D84040;
+}
+
+.quantity-display {
+  font-size: 15px;
+  font-weight: bold;
+  text-align: center;
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  background-color: #f1f1f1; 
+ } 
+
+/*  FILTER / AllCategories*/
 
 .filter-container {
   display: flex;         
   justify-content: center;    
-  gap: 100px; 
-  margin-top: 120px;                    
+  gap:30px; 
+  margin-top: 80px;                    
+} 
+
+.filter-container .filter {
+  padding: 10px 20px;
+  background-color: cadetblue;
+  color: white;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.filter-container .filter:hover {
+  background-color: #4caf50;
 }
 
 
-/* Стили для кнопок категорий */
+/* FILTER / Filter */
+
 .categoryButton {
   padding: 20px;
   margin: 1px;
@@ -138,28 +278,160 @@
   transition: background-color 0.3s;
   }
 
-
 .categoryButtonSelected {
   background-color: #4caf50;
   color: white;
 }
 
-.category-image {
-  width:100%;                 
-  height: 500px;                
-  display: block;               
-  margin: 0;  
-  object-fit: cover; 
+/* SHOP */
+
+.btn{
+  padding:10px;
+  margin-top:80px;
+  border-radius: 15px;
+  background-color: cadetblue;
+  border: none;
+  cursor:pointer;
+}
+
+.products-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  gap: 20px;
+  margin: 40px;
+  padding: 0 20px;
+}
+
+.categoryButtonAlle {
+  padding: 15px;
+  background-color: #4caf50;
+  color: white;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  text-align: center;
+}
+
+.categoryButton {
+  padding: 12px;
+  background-color: cadetblue;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  color: #fff;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  text-align: center;
+}
+
+.categoryButtonSelected {
+  background-color: #1f7d53;
+  color: white;
+}
+
+@media (max-width: 768px) {
+  .filter-container {
+    flex-wrap: wrap;  
+    justify-content: space-between;  
+    padding-left: 30px; 
+    padding-right: 30px; 
+  }
+
+  .categoryButtonAlle {
+    flex: 1 1 100%;  
+    padding: 15px;  
+    text-align: center;
+  }
+
+  .cartIcon{
+    width:40px;
+  }
+
+  h1{
+    font-size:40px;
+  }
+
   
 }
 
-.product-info span {
-  font-size: 15px; /* Можно ограничить размер шрифта */
-}
+  @media (max-width: 480px) {
+    .filter-container {
+      padding-left: 10px;  
+      padding-right: 10px; 
+    }
+  
+    .categoryButtonAlle {
+      flex: 1 1 100%;  
+      padding: 15px;
+    }
+  
+    .categoryButton {
+      flex: 1 1 100%; 
+      padding: 12px;
+    }
 
-.icon{
-  width:30px;
-}
+    .cartIcon{
+      width:30px;
+    }  
+
+  }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+ 
+
+ 
+
 
 
 
