--- a/src/Slideshow/Slideshow.css
+++ b/src/Slideshow/Slideshow.css
@@ -7,76 +7,21 @@
     border-radius: 10px;
     background-size: cover;
     background-color: rgba(0, 0, 0, 0.9);
-  }
-  
+  } 
+ 
+    
   .slide {
     width: 100%;
     height: 100%;
     background-size: cover;
     background-position: center;
-    transition: background-image 0.14s ease-in-out;
+    transition: background-image 3s ease-in-out; 
     background-color: rgba(0, 0, 0, 0.9);
-    filter: brightness(40%);
+    filter: brightness(70%);
+  }
+  
     
-  } 
-  
-  
-  .prev, .next {
-    position: absolute;
-    top: 90%;
-    transform: translateY(-50%);
-    background-color: rgba(0, 0, 0, 0.5); 
-    color: white; 
-    font-size: 24px;
-    border: none;
-    border-radius: 50%;
-    width: 40px;
-    height: 40px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor:pointer;
-    z-index: 10;   
-    
-    }
-  
-  .prev:hover, .next:hover {
-    background-color: rgba(0, 0, 0, 0.0);
-  }
-
-  .prev {
-    left: 10px;
-  }
-  
-  .next {
-    right: 10px;
-  }
-  
-  .indicators {
-    position: absolute;
-    bottom: 10px;
-    width: 100%;
-    text-align: center;
-  }
-
-  .dot {
-    height: 2px; 
-    width: 2px; 
-    margin: 0 4px; 
-    background-color: rgba(255, 255, 255, 0.5); 
-    border-radius: 50%; 
-    display: inline-block; 
-    cursor: pointer; 
-    transition: background-color 0.3s ease; 
-    transform: scale(0.3); 
-}
-
-  .dot.active, .dot:hover {
-    background-color: white;
-  }
-  
-
-  h1{
+ h1{
   position: absolute;
   top: 30%; 
   left: 50%; 
@@ -90,4 +35,12 @@
   transform: translate(-50%, -50%);
   z-index: 2; 
   mix-blend-mode: normal;
+  } 
+
+
+  @media (max-width: 600px) {
+
+  h1{
+    font-size:50px;    
+  }
   }
