--- a/src/Shop/Cart/Cart.css
+++ b/src/Shop/Cart/Cart.css
@@ -61,6 +61,13 @@
         width: 20px;  
         height: 20px;
     }
+
+    .price{
+        display: flex;
+        flex-direction: column;
+        align-content: center;
+                
+    }
 }
 
 
