--- a/src/AboutUs/AboutUs.css
+++ b/src/AboutUs/AboutUs.css
@@ -116,7 +116,7 @@ h3 {
     flex-direction: column;
     align-items: center;
     width:100%;
-    padding: 0;
+    padding: 20px;
   }
   
   h1 {
@@ -124,16 +124,13 @@ h3 {
   }
 
   h3 {
-    font-size: 25px;
-  }
-
-  .container {
-    padding: 10px; 
+    font-size: 16px;
+    margin-bottom: 12px;
   }
 
   .text {
-    font-size: 20px;
-    max-width: 100%; 
+    font-size: 10px;
+    max-width: 80%; 
     text-align: center; 
     padding: 0 15px;
   }
@@ -147,13 +144,12 @@ h3 {
     margin: 0 auto;
     max-width: 100%; 
     height: auto;
-    display: block; 
-    
+     
   }
 
   .image img, .image-two img {
     height: auto;
-    display: block; 
+    max-width:100%; 
     border-radius: 8px;
   }
 
@@ -162,23 +158,18 @@ h3 {
 @media (max-width: 480px) {
 
   .container{
-    display: flex; 
-     flex-direction: column;
-    align-items: center;
-    width:100%;
-    padding: 0;
+     padding: 10px;
   }
   
   h3 {
-    font-size: 100px;
+    font-size: 16px;
   }
 
-  .image, .image-two {
+  .image {
     max-height: 100px;
     margin: 0 auto;  
-    max-width: 500px; 
+    max-width: 100%; 
     height: auto;
-    display: block; 
    }
 
 
@@ -192,13 +183,9 @@ h3 {
     font-size: 1.1rem;
   }
 
-  .countdown {
-    font-size: 1.2rem;
-  }
-
   .text {
-    font-size: 0.9rem;
-    padding: 0 50px; 
+    font-size: 12px;
+    padding: 0 30px; 
     max-width:100%;
     text-align: center;
   }
