--- a/src/AboutUs/AboutUs.css
+++ b/src/AboutUs/AboutUs.css
@@ -120,11 +120,11 @@ h3 {
   }
   
   h1 {
-    font-size: 20px;
+    font-size: 20px; 
   }
 
   h3 {
-    font-size: 16px;
+    font-size: 16px; 
     margin-bottom: 12px;
   }
 
@@ -137,28 +137,28 @@ h3 {
 
   .book-button {
     padding: 12px 25px;
-    font-size: 1rem;
+    font-size: 16px;
   }
   
   .image, .image-two {
-    margin: 0 auto;
+    margin: 20px 0;
     max-width: 100%; 
     height: auto;
-     
+   
   }
 
   .image img, .image-two img {
     height: auto;
-    max-width:100%; 
+    max-width:100%;
     border-radius: 8px;
   }
 
   }
 
-@media (max-width: 480px) {
+@media (max-width: 360px) {
 
   .container{
-     padding: 10px;
+    padding: 10px;
   }
   
   h3 {
@@ -170,6 +170,7 @@ h3 {
     margin: 0 auto;  
     max-width: 100%; 
     height: auto;
+    
    }
 
 
@@ -183,11 +184,12 @@ h3 {
     font-size: 1.1rem;
   }
 
+
   .text {
     font-size: 12px;
     padding: 0 30px; 
     max-width:100%;
     text-align: center;
   }
-   
+
 }
