--- a/src/Slideshow/Slideshow.css
+++ b/src/Slideshow/Slideshow.css
@@ -39,8 +39,18 @@
 
 
   @media (max-width: 600px) {
+        .slideshow {
+        height: 300px;
+    }
 
-  h1{
-    font-size:50px;    
+    h1 {
+        font-size: 14px; 
+        top: 34%; 
+    }
+
+    .slide {
+      filter: brightness(80%); 
   }
   }
+
+
