--- a/src/AboutUs/AboutUs.css
+++ b/src/AboutUs/AboutUs.css
@@ -116,69 +116,61 @@ h3 {
     flex-direction: column;
     align-items: center;
     width:100%;
-    padding: 0;
+    padding: 20px;
   }
   
   h1 {
-    font-size: 20px;
+    font-size: 20px; 
   }
 
   h3 {
-    font-size: 25px;
-  }
-
-  .container {
-    padding: 10px; 
+    font-size: 16px; 
+    margin-bottom: 12px;
   }
 
   .text {
-    font-size: 20px;
-    max-width: 100%; 
+    font-size: 10px;
+    max-width: 80%; 
     text-align: center; 
     padding: 0 15px;
   }
 
   .book-button {
     padding: 12px 25px;
-    font-size: 1rem;
+    font-size: 16px;
   }
   
   .image, .image-two {
-    margin: 0 auto;
+    margin: 20px 0;
     max-width: 100%; 
     height: auto;
-    display: block; 
-    
+   
   }
 
   .image img, .image-two img {
     height: auto;
-    display: block; 
+    max-width:100%;
     border-radius: 8px;
   }
 
   }
 
-@media (max-width: 480px) {
+@media (max-width: 360px) {
 
   .container{
-    display: flex; 
-     flex-direction: column;
-    align-items: center;
-    width:100%;
-    padding: 0;
+    padding: 10px;
   }
   
   h3 {
-    font-size: 100px;
+    font-size: 16px;
   }
 
-  .image, .image-two {
+  .image {
     max-height: 100px;
     margin: 0 auto;  
-    max-width: 500px; 
+    max-width: 100%; 
     height: auto;
-    display: block; 
+    
    }
 
 
@@ -192,15 +184,12 @@ h3 {
     font-size: 1.1rem;
   }
 
-  .countdown {
-    font-size: 1.2rem;
-  }
 
   .text {
-    font-size: 0.9rem;
-    padding: 0 50px; 
+    font-size: 12px;
+    padding: 0 30px; 
     max-width:100%;
     text-align: center;
   }
-   
+
 }
