--- a/src/Accordion/Accordion.css
+++ b/src/Accordion/Accordion.css
@@ -36,13 +36,15 @@
       justify-content:center;
       align-items: center; 
       flex-wrap: wrap; 
+      width:100%;
+      margin-right:90px;
       } 
       
     .image {
       width: 350px;
       height: 300px;
-      margin-left: 0; 
-      margin-right: 60px; 
+      margin-left: 0px; 
+      margin-right: 10px; 
     }
    
    .image-two{
@@ -72,7 +74,7 @@
         content: "✔";  
         font-size: 20px; 
         color: #5B913B;
-        margin-right: 30px; 
+        margin-right: 20px; 
       }
        
 
