--- a/src/Shop/Cart/Cart.css
+++ b/src/Shop/Cart/Cart.css
@@ -9,7 +9,7 @@
 .cart-item-image img {
     width: 150px;
     height: 150px;
-    margin-left: 0px;
+    margin-left: 80px;
 }
 
 .cart-item-details {
@@ -31,7 +31,7 @@
 }
 
 .checkout-button{
-    margin-left:70px;
+    margin-left:140px;
     margin-top:10px;
 }
 
@@ -61,6 +61,14 @@
         width: 20px;  
         height: 20px;
     }
+
+    .price{
+        display: flex;
+        flex-direction: column;
+        align-content: center;
+                
+    }
+    
 }
 
 
