--- a/src/Shop/Cart/Cart.css
+++ b/src/Shop/Cart/Cart.css
@@ -66,9 +66,16 @@
         display: flex;
         flex-direction: column;
         align-content: center;
+       
                 
     }
    
+}
+
+@media (max-width: 360px){
+    checkout-button{
+        width:100%;
+    }
 }
 
 
