--- a/src/AboutUs/AboutUs.css
+++ b/src/AboutUs/AboutUs.css
@@ -166,7 +166,7 @@ h3 {
   }
 
   .image {
-    max-height: 100px;
+    /* max-height: 100px; */
     margin: 0 auto;  
     max-width: 100%; 
     height: auto;
