--- a/src/Footer/Footer.css
+++ b/src/Footer/Footer.css
@@ -106,12 +106,21 @@
 
 
 @media (max-width: 768px) {
+
+  html, body {
+    overflow-x: hidden;  /* Отключаем горизонтальный скролл */
+    width: 100%;
+    margin: 0;
+    padding: 0;
+  }
+
   .footer-content {
     display: flex;
     flex-direction: column;
     align-items: center; 
     text-align: center;  
     gap:10px;
+    width:100%;
   }
 
   .footer-left, .footer-right {
