--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,8 @@ body{
 
 .heading{
     color:#0D4715;
-}
+    text-decoration: none;
+   }
 
 .hamburger {
   display: none; 
@@ -17,24 +18,17 @@ body{
   cursor: pointer;
   padding: 10px;
 }
-
   
   .nav-links.open .left-links, .nav-links.open .right-links {
     display: flex; 
     text-align: center;
   }
 
-.hamburger {
-  display: none; 
-  font-size: 30px;
-  cursor: pointer;
-  padding: 10px;
-}
-
 .nav-links {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  
 }
 
 .left-links, .right-links {
@@ -44,9 +38,15 @@ body{
 
 .link {
   text-decoration: none;
-  color: #000;
+  color: #364d53;
   margin: 0 15px;
+  font-weight: bold;
 }
+
+
+
+
+
 
 
  
