--- a/src/Accordion/Accordion.css
+++ b/src/Accordion/Accordion.css
@@ -36,13 +36,15 @@
       justify-content:center;
       align-items: center; 
       flex-wrap: wrap; 
-      width:100%;
-     } 
+      max-width:100%;
+      gap: 20px; 
+     }
+
       
     .image {
       width: 350px;
       height: 300px;
-      margin-left: 0px; 
+      margin-left:0px; 
       margin-right: 10px; 
     }
    
@@ -59,8 +61,9 @@
       display: flex;
       flex-direction: column;
       list-style-type: none; 
-       } 
-      
+      max-width: 500px;
+    } 
+
     .list-item {
       word-wrap: break-word;
       overflow-wrap: break-word;
